Fix view on mobile

--- a/css/ak.css
+++ b/css/ak.css
@@ -285,6 +285,17 @@ html, body {
     margin-left:-5px
 }
 
+.ak-item-group{
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -ms-flex-direction:row;
+    flex-direction:row;
+    width:200px;
+}
+
 @media screen and (max-width:768px) {
     .ak-card-group{ 
         width:180px;
