--- a/css/akelite.css
+++ b/css/akelite.css
@@ -10,7 +10,7 @@
 .reqmats-container li {
     display: inline-block; 
     list-style-type: none; 
-    background-color: white; 
+    background-color: rgb(68, 67, 67); 
     border-radius: 5px; 
     margin-right: 5px;
     margin-top: 10px;
@@ -19,38 +19,55 @@
 }
 
 .reqmats-container .item-name {
-    position: absolute; 
-    top: -18px; 
-    left: 0px;
-    padding: 0 7px;
-    background-color: white;
-    border-radius: 5px;
-    max-width: 140px;
-    font-size: 0.85em;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
+    color:#DDD;
+    position: absolute;
+    margin-top:-5px;
+    margin-left: -5px;
+    font-size: 14px;
+    padding:4px;
+    padding-top: 1px;
+    padding-bottom:1px;
+    border-radius: 2px;
+    /* text-shadow: 0px 0px 2px #2f2f2f ; */
+    background-color: #2f2f2f;
+    z-index: 2;
+}
+
+.ak-btn-wide{
+    width: 100%;
 }
 
 .reqmats-container.smallcontainer .item-name {
-    top: -22px;
-    max-width: 130px;
-    font-size: 0.8em;
-    padding-bottom: 10px;
+    color:#DDD;
+    position: absolute;
+    margin-top:-5px;
+    margin-left: -5px;
+    font-size: 14px;
+    padding:4px;
+    padding-top: 1px;
+    padding-bottom:1px;
+    border-radius: 2px;
+    /* text-shadow: 0px 0px 2px #2f2f2f ; */
+    background-color: #2f2f2f;
+    z-index: 2;
 }
 
 .reqmats-container .item-amount {
-    background-color: lightgrey;
+    color:#ddd;
+    background-color: #111;
     border-radius: 6px;
     padding: 0px 4px;
     position: absolute;
     right: 0;
     bottom: 0;
     font-weight: bold;
-    font-size: 1.4em;
+    font-size: 1.2em;
+    z-index: 2;
 }
 
 .reqmats-container.smallcontainer .item-amount {
     font-size: 1.2em;
+    z-index: 2;
 }
 
 .reqmats-container .item-image {
@@ -97,3 +114,48 @@
     height: 130px;
     width: 130px;
 }
+
+@media screen and (max-width:768px) {
+    .reqmats-container .item-name {
+        font-size: 0.7em;
+    }
+    .reqmats-container.smallcontainer .item-name {
+        font-size: 0.7em;
+    }
+    .reqmats-container .item-amount {
+        font-size: 1em;
+    }
+    
+    .reqmats-container.smallcontainer .item-amount {
+        font-size: 1em;
+    }
+    .reqmats-container.smallcontainer .item-image > img {
+        max-width: 80px;
+        max-height: 90px;
+    }
+    
+    .reqmats-container li .item-rarity {
+        width: 90px;
+        left: 0;
+        position: absolute;
+    }
+    .reqmats-container .item-image > img {
+        vertical-align: middle; 
+        max-width: 80px;
+        max-height: 90px;
+        width: auto;
+        height: auto;
+    }
+    .reqmats-container .internal-container {
+        height: 90px;
+        width: 90px;
+    }
+    .reqmats-container.smallcontainer .item-rarity {
+        width: 90px;
+    }
+    .reqmats-container.smallcontainer .internal-container {
+        height: 90px;
+        width: 90px;
+    }
+}
+
